k8s/apps/ducknet/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
      tier: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
        tier: nextcloud
    spec:
      containers:
      - image: nextcloud:22
        name: nextcloud
        resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: nextcloud-persistent-storage
          mountPath: /var/www/html/data
        - name: nextcloud-config
          mountPath: /var/www/html/config
        - name: nextcloud-apps
          mountPath: /var/www/html/custom_apps
      volumes:
      - name: nextcloud-persistent-storage
        persistentVolumeClaim:
          claimName: nextcloud-data
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: nextcloud-config
      - name: nextcloud-apps
        persistentVolumeClaim:
          claimName: nextcloud-apps
      securityContext:
        fsGroup: 33
